:art: improve hebergement overall alignements Améliorations diverses de la section hébergement : - Remplissage régulier des images par rapport au conteneur. - Fixation de la taille des conteneurs. - Fixation de l'icône "populaire" avec la flèche montante à droite.

--- a/style.css
+++ b/style.css
@@ -207,10 +207,17 @@ form > *
 
 .hebergements__trending
 {
+    position: relative; /* Pour fixer en absolute l'icône "fa-line-chart" */
     flex-basis: 30%;
     padding: 30px 20px 30px 20px;
     border-radius: 25px;
     background-color: #f2f2f2;
+}
+
+.fa-line-chart
+{
+    position: absolute;
+    right: 30px;
 }
 
 /* .hebergements__main-list et .hebergements__trending ont trois propriétés identiques. Essayer de regrouper pour optimiser */
@@ -296,6 +303,11 @@ button
     border-radius: 25px;
 }
 
+.hebergements__card_main-list
+{
+    width: 240px;
+}
+
 figure
 {
     margin: 5px;
@@ -303,7 +315,13 @@ figure
 
 .hebergements__img
 {
+    width: 100%;
     border-radius: 25px 25px 0 0;
+}
+
+.hebergements__card_trending
+{
+    width: 300px;
 }
 
 .hebergements__card_trending figure
